# bixit-server

./: .gitignore  CMakeLists.txt  README.md  test  test_minimal.cpp
grpc/: CMakeLists.txt
grpc/proto/: CMakeLists.txt  service.proto
http/: CMakeLists.txt
http/include/: handlers.hpp  http_router.hpp
http/src/: handlers.cpp  http_router.cpp  server_http.cpp
